@@ -9,6 +9,7 @@
     - BUGFIX: Add confirmation dialog for "Force recheck" action (closes #131)
     - BUGFIX: Greatly improve RSS manager performance (closes #34)
     - OTHER: Generate translations at configure time to reduce tarball size
+    - PERFORMANCE: Impove drawing speed of tranferlist when there are many torrents(>100)
 
 * Thu Aug 09 2012 - Christophe Dumez <chris@qbittorrent.org> - v3.0.0
     - FEATURE: Brand new torrent addition dialog
